checker/tests/nullness-javac-errors/BadCast2.java
class BadCast2 {
  public static void main(String[] args) {
    // :: error: illegal start of type
    String example = (@NonNull) "";
  }
}
